fix some clipping issues

--- a/client/src/css/login.css
+++ b/client/src/css/login.css
@@ -36,7 +36,7 @@
 }
 
 #form-container-login {
-  min-height: 375px;
+  min-height: 300px;
 }
 
 .login-email {
